--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,23 @@
 <body>
 	<header class="header">
 		<nav class="header__upper-menu upper-menu">
-			<button class="upper-menu__button-burger"></button>
+			<button class="round-icon round-icon--burger"></button>
 			<a href="#" class="upper-menu__logo"><img src="img/logo.svg" alt=""></a>
 			<div class="upper-menu__divider2"></div>
-			<button class="upper-menu__button-call"></button>
-			<button href="#" class="upper-menu__button-chat"></button>
-			<a href="#" class="upper-menu__link-profile"></a>
+			<button class="round-icon round-icon--call"></button>
+			<button href="#" class="round-icon round-icon--chat"></button>
+			<a href="#" class="round-icon round-icon--profile"></a>
 			<div class="upper-menu__divider"></div>
-			<button class="upper-menu__button-repair"></button>
-			<a href="#" class="upper-menu__link-checkstatus"></a>
+			<button class="round-icon round-icon--repair"></button>
+			<a href="#" class="round-icon round-icon--checkstatus"></a>
 		</nav>
 	</header>
 	<nav class="burger-menu clearfix">
 		<div class="burger-menu__container">
 			<div class="burger-menu__head head">
-				<button class="head__close-menu"></button>
+				<button class="round-icon round-icon--close-menu"></button>
 				<a href="#" class="head__logo"><img src="img/logo.svg" alt=""></a>
-				<button class="head__search"></button>
+				<button class="round-icon round-icon--search"></button>
 			</div>
 			<div class="burger-menu__content">
 				<div class="burger-menu__menu-list menu-list">
@@ -40,9 +40,9 @@
 					<a href="#" class="menu-list__link">Контакты</a>
 				</div>
 				<div class="burger-menu__contact contact">
-					<button class="contact__call"></button>
-					<button class="contact__chat"></button>
-					<a href="#" class="contact__profile"></a>
+					<button class="round-icon round-icon--call-burger"></button>
+					<button class="round-icon round-icon--chat-burger"></button>
+					<a href="#" class="round-icon round-icon--profile-burger"></a>
 				</div>
 				<a class="burger-menu__email" href="mailto:mail@cps.com">mail@cps.com</a>
 				<span class="burger-menu__phone">8 800 890 8900</span>
@@ -56,7 +56,7 @@
 	</nav>
 	<div class="feedback">
 		<div class="feedback__container">
-		<button class="feedback__close-menu"></button>
+		<button class="round-icon round-icon--close-menu"></button>
 		<div class="title feedback__title">
 			<h2 class="title__name">Обратная связь</h2>
 		</div>
@@ -72,7 +72,7 @@
 	</div>
 	<div class="request-call">
 		<div class="request-call__container">
-		<button class="request-call__close-menu"></button>
+		<button class="round-icon round-icon--close-menu"></button>
 		<div class="title request-call__title">
 			<h2 class="title__name">Заказать звонок</h2>
 		</div>
@@ -89,8 +89,8 @@
 			<div class="container__title title">
 				<h1 class="title__name">Услуги и сервисы</h1>
 				<div class="title__actions actions">
-					<a href="#" class="actions__link-repair"><span class="actions__link-name">Оставить заявку</span></a>
-					<a href="#" class="actions__link-checkstatus"><span class="actions__link-name">Статус ремонта</span></a></div>
+					<a href="#" class="round-icon round-icon--repair"><span class="actions__link-name">Оставить заявку</span></a>
+					<a href="#" class="round-icon round-icon--checkstatus"><span class="actions__link-name">Статус ремонта</span></a></div>
 			</div>
 			<nav class="container__slide-menu slide-menu">
 				<a href="#" class="slide-menu__link slide-menu__link--active">Ремонтируемые бренды</a>
@@ -113,131 +113,131 @@
 					<img class="article__img" src="img/MG3223.jpg" alt="">
 				</div>
 			</article>
-			<div class="subtitle"><h2 class="subtitle__name">Ремонт техники различных брендов</h2></div>
+			<div class="subtitle"><h2 class="subtitle__name subtitle-content">Ремонт техники различных брендов</h2></div>
 			<div class="swiper swiper--brands">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
 						<a href="#" class="swiper__item-link">
-                        <img class="swiper__item-logo" src="img/bitmap.svg" alt=""><div class="swiper__button"></div>
+                        <img class="swiper__item-logo" src="img/bitmap.svg" alt=""><div class="round-icon round-icon--swiper"></div>
                         </a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-						<img class="swiper__item-logo" src="img/bitmap2.svg" alt=""><div class="swiper__button"></div>
+						<img class="swiper__item-logo" src="img/bitmap2.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 						</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap3.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap3.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap4.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap4.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap5.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap5.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap6.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap6.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap7.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap7.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap8.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap8.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap2.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap2.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="swiper__item-link">
-							<img class="swiper__item-logo" src="img/bitmap3.svg" alt=""><div class="swiper__button"></div>
+							<img class="swiper__item-logo" src="img/bitmap3.svg" alt=""><div class="round-icon round-icon--swiper"></div>
 							</a>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-			<button class="expand-btn">Показать все</button>
-			<div class="subtitle"><h2 class="subtitle__name">Ремонт различных видов техники</h2></div>
+			<button class="expand-btn expand-btn--margin">Показать все</button>
+			<div class="subtitle"><h2 class="subtitle__name subtitle-content">Ремонт различных видов техники</h2></div>
 			<div class="swiper swiper--tech">
                 <div class="swiper-wrapper swiper-wrapper--tech">
                     <div class="swiper-slide swiper-slide--tech">
 						<a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт ноутбуков</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт ноутбуков</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
                         </a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-						<span class="swiper__item-name">Ремонт планшетов</span><div class="swiper__button swiper__button--tech"></div>
+						<span class="swiper__item-name">Ремонт планшетов</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 						</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт ПК</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт ПК</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт мониторов</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт мониторов</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт ноутбуков</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт ноутбуков</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт планшетов</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт планшетов</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт ПК</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт ПК</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт мониторов</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт мониторов</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт ноутбуков</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт ноутбуков</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт планшетов</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт планшетов</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                     <div class="swiper-slide swiper-slide--tech">
                         <a href="#" class="swiper__item-link swiper__item-link--tech">
-							<span class="swiper__item-name">Ремонт ПК</span><div class="swiper__button swiper__button--tech"></div>
+							<span class="swiper__item-name">Ремонт ПК</span><div class="round-icon round-icon--swiper round-icon--tech"></div>
 							</a>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-			<button class="expand-btn expand-btn--tech">Показать все</button>
-			<div class="subtitle"><h2 class="subtitle__name">Цены на услуги</h2></div>
+			<button class="expand-btn expand-btn--margin expand-btn--tech">Показать все</button>
+			<div class="subtitle"><h2 class="subtitle__name subtitle-content">Цены на услуги</h2></div>
 			<div class="swiper swiper--price">
                 <div class="swiper-wrapper swiper-wrapper--price">
                     <div class="swiper-slide swiper-slide--price">
@@ -247,7 +247,7 @@
 								<div class="swiper__item-container--element">
 								<div class="swiper__item-title">Цена</div><div class="swiper__item-description">Бесплатно</div>
 								<div class="swiper__item-title">Срок</div><div class="swiper__item-description">30-120 мин</div></div>
-								<button class="swiper__button-order"></button>
+								<button class="round-icon round-icon--swiper round-icon--order"></button>
 							</div>
                         </a>
                     </div>
@@ -258,7 +258,7 @@
 								<div class="swiper__item-container--element">
 								<div class="swiper__item-title">Цена</div><div class="swiper__item-description">Бесплатно</div>
 								<div class="swiper__item-title">Срок</div><div class="swiper__item-description">30-120 мин</div></div>
-								<button class="swiper__button-order"></button>
+								<button class="round-icon round-icon--swiper round-icon--order"></button>
 							</div>
 						</a>
                     </div>
@@ -269,7 +269,7 @@
 								<div class="swiper__item-container--element">
 								<div class="swiper__item-title">Цена</div><div class="swiper__item-description">Бесплатно</div>
 								<div class="swiper__item-title">Срок</div><div class="swiper__item-description">30-120 мин</div></div>
-								<button class="swiper__button-order"></button>
+								<button class="round-icon round-icon--swiper round-icon--order"></button>
 							</div>
 							</a>
                     </div>
@@ -280,7 +280,7 @@
 								<div class="swiper__item-container--element">
 								<div class="swiper__item-title">Цена</div><div class="swiper__item-description">Бесплатно</div>
 								<div class="swiper__item-title">Срок</div><div class="swiper__item-description">30-120 мин</div></div>
-								<button class="swiper__button-order"></button>
+								<button class="round-icon round-icon--swiper round-icon--order"></button>
 							</div>
 							</a>
                     </div>
@@ -291,7 +291,7 @@
 								<div class="swiper__item-container--element">
 								<div class="swiper__item-title">Цена</div><div class="swiper__item-description">Бесплатно</div>
 								<div class="swiper__item-title">Срок</div><div class="swiper__item-description">30-120 мин</div></div>
-								<button class="swiper__button-order"></button>
+								<button class="round-icon round-icon--swiper round-icon--order"></button>
 							</div>
 							</a>
                     </div>
